# SFML-Rendering

./: CMakeLists.txt  LICENSE  README.md
src/: camera.cpp  camera.hpp  conf.hpp  events.cpp  events.hpp  main.cpp  star.hpp
